<resources>
    <string name="app_name">CoronaApp</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
    <string name="active_cases">Active cases:</string>
    <string name="new_cases">New cases:</string>
    <string name="new_deaths">New deaths:</string>
    <string name="information">Information</string>
    <string name="what_is_covid_19">What is Covid-19?</string>
    <string name="learn_about_covid_19_virus">Learn about Covid-19 virus</string>
    <string name="symptoms">Symptoms</string>
    <string name="learn_covid_19_symptoms">Learn Covid-19 symptoms</string>
    <string name="prevention_amp_treatment"><![CDATA[Prevention & treatment]]></string>
    <string name="learn_about_treatment">Learn about treatment</string>
    <string name="total_cases">Total cases:</string>
    <string name="total_recovered">Total recovered:</string>
    <string name="new_recovered">New recovered:</string>
    <string name="total_deaths">Total deaths:</string>
    <string name="preferenceCode">not_first_boot</string>
    <string name="about_covid_19">About Covid-19</string>
    <string name="coronavirus_general_info">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.</string>
    <string name="learn_more">Learn more about the virus</string>
    <string name="visit_who_website">Visit WHO website</string>
    <string name="consider_consulting">Consider consulting with a doctor if you have similar symptoms</string>
    <string name="common_symptoms">&#x26A0; Common:\n• Fever\n• Dry cough\n• Tiredness</string>
    <string name="less_common_symptoms">&#x26A0; Less common:\n• Loss of taste or smell\n• Diarrhoea\n• Sore throat</string>
    <string name="learn_more_about_the_symptoms">Learn more about the symptoms</string>
    <string name="stay_safe">Stay safe</string>
    <string name="prevention">Prevention</string>
    <string name="wash_your_hands_regularly">Wash your hands regularly</string>
    <string name="avoid_touching_your_face">Avoid touching your face</string>
    <string name="practice_physical_distancing">Practice physical distancing</string>
    <string name="treatment">Treatment</string>
    <string name="to_date_there_are_no_specific_vaccines_or_medicines_for_covid_19">To date, there are no specific vaccines or medicines for COVID-19</string>
    <string name="if_you_feel_sick_you_should_rest_drink_plenty_of_fluid_and_eat_nutritious_food">If you feel sick you should rest, drink plenty of fluid, and eat nutritious food</string>
    <string name="cover_your_mouth_and_nose_when_coughing_or_sneezing">Cover your mouth and nose when coughing or sneezing</string>
    <string name="settings">Settings</string>
    <string name="choose_notification_interval">Choose notification interval</string>
    <string name="pick">Pick</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="hours">Hour(s)</string>
</resources>