<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/treatment"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/to_date_there_are_no_specific_vaccines_or_medicines_for_covid_19"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/if_you_feel_sick_you_should_rest_drink_plenty_of_fluid_and_eat_nutritious_food"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

</LinearLayout>