<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFragments"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/symptoms"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_constraint_layout_card_about_coronavirus"
        android:elevation="16dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/image_view_symptoms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/symptoms"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_consider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/consider_consulting"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_symptoms" />

        <TextView
            android:id="@+id/text_view_common_symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/common_symptoms"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/text_view_less_common_symptoms"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_consider" />

        <TextView
            android:id="@+id/text_view_less_common_symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/less_common_symptoms"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_view_common_symptoms"
            app:layout_constraintTop_toBottomOf="@id/text_view_consider" />

        <TextView
            android:id="@+id/text_view_learn_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_common_symptoms"
            android:text="@string/learn_more_about_the_symptoms"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginTop="8dp"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_visit_who_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_learn_more"
            android:text="@string/visit_who_website"
            android:drawableStart="@drawable/ic_web"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:drawablePadding="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>