<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFragments">

    <TextView
        android:id="@+id/text_view_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/information"
        android:textColor="@color/titleTextViewColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_info"
        app:layout_constraintBottom_toBottomOf="@id/text_view_info"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_settings"/>

    <ImageView
        android:id="@+id/image_view_virus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/art"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/text_view_info" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_about_virus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_info_sections"
        android:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_virus"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_virus_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_virus" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_view_what_is_covid_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/what_is_covid_19"
            android:textColor="@color/infoSectionsTextColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_what_is_covid_2"
            app:layout_constraintStart_toEndOf="@id/container_virus_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_view_what_is_covid_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_about_covid_19_virus"
            android:textColor="@color/infoSectionsTextColor2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_view_what_is_covid_1"
            app:layout_constraintTop_toBottomOf="@+id/text_view_what_is_covid_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_symptoms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_info_sections"
        android:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_about_virus"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_symptoms_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_symptoms" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_view_symptoms_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/symptoms"
            android:textColor="@color/infoSectionsTextColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_symptoms_2"
            app:layout_constraintStart_toEndOf="@id/container_symptoms_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_view_symptoms_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_covid_19_symptoms"
            android:textColor="@color/infoSectionsTextColor2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_view_symptoms_1"
            app:layout_constraintTop_toBottomOf="@+id/text_view_symptoms_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_prevention_and_treatment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_info_sections"
        android:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_symptoms"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_prevention_and_treatment_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shield" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_view_prevention_and_treatment_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/prevention_amp_treatment"
            android:textColor="@color/infoSectionsTextColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_prevention_and_treatment_2"
            app:layout_constraintStart_toEndOf="@id/container_prevention_and_treatment_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_view_prevention_and_treatment_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_about_treatment"
            android:textColor="@color/infoSectionsTextColor2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_view_prevention_and_treatment_1"
            app:layout_constraintTop_toBottomOf="@+id/text_view_prevention_and_treatment_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>