<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:background="@drawable/bg_country_list_item"
    android:elevation="8dp"
    android:padding="16dp"
    android:paddingHorizontal="12dp"
    android:paddingVertical="4dp">

    <TextView
        android:id="@+id/text_view_country_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Country name"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/active_cases"
        app:layout_constraintEnd_toStartOf="@+id/text_view_active_cases"
        app:layout_constraintTop_toTopOf="@id/text_view_active_cases"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_cases"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@id/text_view_new_cases"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_view_active_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_new_cases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="100"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_view_new_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_new_deaths"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_active_cases"
        tools:text="+100"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_deaths"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@id/text_view_new_deaths"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_view_new_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_new_cases"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="+100"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>